--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,17 @@
     background: green;
     text-align: center;
 }
+
+.button{
+    padding: 10px 10px;
+    height: 50px;
+    width: 60px;
+}
+
+.loader{
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
