--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,7 +15,7 @@
 }
 
 .content{
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -58,6 +58,22 @@
                 right: 46px;
             }
         }
+    }
+    .mid{
+        padding-top: 30px;
+    }
+    .bottom{
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 50px;
+        background: $footer;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: $midlight;
     }
 }
 
