--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -29,6 +29,7 @@
         align-items: center;
         .logo{
             position: relative;
+            cursor: pointer;
             img{
                 width: 55px;
                 height: 55px;
@@ -61,13 +62,38 @@
     }
     .mid{
         padding-top: 30px;
+        .midCont{
+            min-height: calc(100vh - 50px - 100px);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .bgimgHome{
+                width: 80%;
+                height: 60%;
+                object-fit: cover;
+            }
+        }
+        .midCont2{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            padding-right: 30px;
+            h2{
+                text-align: left;
+                font-size: 2.5rem;
+            }
+            p{
+                margin-top: 50px;
+                font-size: 1.1rem;
+            }
+        }
     }
     .bottom{
-        position: fixed;
+        position: absolute;
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 50px;
+        height: 50px;        
         background: $footer;
         text-align: center;
         display: flex;
