--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -67,10 +67,31 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 0;
             .bgimgHome{
-                width: 80%;
-                height: 60%;
+                width: 100%;
+                height: 80%;
                 object-fit: cover;
+            }
+            .formcontent{
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                h1{
+                    text-transform: uppercase;
+                    text-align: center;
+                    color: $primary;
+                    font-size: 2rem;
+                }
+                .form{
+                    margin-top: 10%;
+                    background-color: red;
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
         .midCont2{
@@ -81,12 +102,16 @@
             h2{
                 text-align: left;
                 font-size: 2.5rem;
+                letter-spacing: 1px;
             }
             p{
                 margin-top: 50px;
-                font-size: 1.1rem;
+                font-size: 1rem;
+                letter-spacing: 1px;
+                padding-bottom: 40px;
             }
         }
+
     }
     .bottom{
         position: absolute;
