DEV sign in page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,7 @@
 $primary : #002885;
 $footer : #EDF1F7;
 $midlight : #8F9BB3;
+$uiblack : #101426;
+$inputbg : #D9D9D9;
+$white : #fff;
+$primary2 : #091C7A;
