--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -68,11 +68,6 @@
             justify-content: center;
             align-items: center;
             padding: 0;
-            .bgimgHome{
-                width: 100%;
-                height: 80%;
-                object-fit: cover;
-            }
             .formcontent{
                 width: 100%;
                 height: 100%;
@@ -154,6 +149,12 @@
             justify-content: center;
             flex-direction: column;
             padding-right: 30px;
+            .bgimgHome{
+                width: 400px;
+                height: 400px;
+                object-fit: cover;
+                display: inline-block;
+            }
             h2{
                 text-align: left;
                 font-size: 2.5rem;
@@ -186,7 +187,7 @@
 
 .adminTopBarIcons{
     position: relative;
-    width: 4.5%;
+    width: 6%;
     display: flex;
     justify-content: space-between;
     align-items: center;
